<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.vogella</groupId>
    <artifactId>com.vogella.xml.jaxb.maven</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <properties>
        <maven.compiler.target>9</maven.compiler.target>
        <maven.compiler.source>9</maven.compiler.source>
    </properties>

    <dependencies>
        <!--        <dependency>-->
        <!--            <groupId>com.sun.xml.bind</groupId>-->
        <!--            <artifactId>jaxb-impl</artifactId>-->
        <!--            <version>2.3.3</version>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>com.sun.xml.ws</groupId>-->
        <!--            <artifactId>jaxws-ri</artifactId>-->
        <!--            <version>2.3.3</version>-->
        <!--            <type>pom</type>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>jakarta.xml.ws</groupId>
            <artifactId>jakarta.xml.ws-api</artifactId>
            <version>4.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.sun.xml.ws</groupId>
            <artifactId>jaxws-rt</artifactId>
            <version>4.0.0</version>
        </dependency>

        <dependency>
            <groupId>javax.xml.ws</groupId>
            <artifactId>jaxws-api</artifactId>
            <version>2.2.3</version>
        </dependency>
    </dependencies>


    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.9.0</version>
                <configuration>
                    <release>9</release>
                    <arg>--add-modules</arg>
                    <arg>java.xml.bind</arg>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.sun.xml.ws</groupId>
                <artifactId>jaxws-maven-plugin</artifactId>
                <version>3.0.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>wsimport</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <wsdlLocation>/test.wsdl</wsdlLocation>
                    <wsdlDirectory>${project.basedir}/src/main/resources/</wsdlDirectory>
                    <extension>true</extension>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.sun.xml.ws</groupId>
                        <artifactId>jaxws-tools</artifactId>
                        <version>3.0.2</version>
                    </dependency>
                </dependencies>
            </plugin>

        </plugins>
    </build>
</project>